# DesktopPet

./: AGENTS.md  可行性报告.md  竞品分析报告.md
desktop-pet/: .gitignore  package-lock.json  package.json
desktop-pet/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-pet/src-tauri/capabilities/: default.json
desktop-pet/src-tauri/src/: animation.rs  behavior.rs  lib.rs  main.rs  pet.rs  physics.rs
